# Qt-Quick-Examples

./: README.md
0.analog clock/: CMakeLists.txt  README.md
0.analog clock/plugins/analog_clock/: CMakeLists.txt  README.md  analog_clock.qmltypes  qmldir
0.analog clock/plugins/analog_clock/include/: clock_backend.hpp  plugin.hpp
0.analog clock/plugins/analog_clock/qml/: AnalogClock.qml
0.analog clock/plugins/analog_clock/src/: clock_backend.cpp  plugin.cpp
0.analog clock/qml/: main.qml  qml.qrc
0.analog clock/src/: main.cpp
1.meter/: CMakeLists.txt
1.meter/plugins/: CMakeLists.txt
1.meter/plugins/meter/: CMakeLists.txt  README.md  meter.qmltypes  qmldir
1.meter/plugins/meter/include/: nidle.hpp  plugin.hpp  scale.hpp
1.meter/plugins/meter/qml/: Meter.qml  qml.qrc
1.meter/plugins/meter/src/: nidle.cpp  plugin.cpp  scale.cpp
1.meter/qml/: main.qml  qml.qrc
1.meter/src/: main.cpp
2.Animated background/: CMakeLists.txt  README.md
2.Animated background/qml/: SinWave.qml  main.qml  qml.qrc
2.wave background/: CMakeLists.txt
2.wave background/plugins/: CMakeLists.txt
2.wave background/plugins/wave_background/: CMakeLists.txt  qmldir  wave_background.qmltypes
2.wave background/plugins/wave_background/include/: plugin.hpp
2.wave background/plugins/wave_background/qml/: WaveBackground.qml  qml.qrc
2.wave background/plugins/wave_background/src/: plugin.cpp
2.wave background/qml/: main.qml
analog clock/: CMakeLists.txt  README.md
analog clock/img/: img.qrc
analog clock/include/: clock_backend.hpp
analog clock/plugins/: CMakeLists.txt
analog clock/plugins/analog_clock/: CMakeLists.txt  qmldir
analog clock/plugins/analog_clock/img/: img.qrc
analog clock/plugins/analog_clock/include/: plugin.hpp
analog clock/plugins/analog_clock/qml/: AnalogClock.qml  Clock.qml  qml.qrc
analog clock/plugins/analog_clock/src/: plugin.cpp
analog clock/qml/: Clock.qml  main.qml  qml.qrc
analog clock/src/: clock_backend.cpp  main.cpp
meter/: README.md
meter/plugins/meter/include/: scale.hpp
meter/plugins/meter/qml/: Meter.qml
meter/src/: main.cpp
